Add get /_responses handler.
