# openapi.yml
@@ -4,18 +4,18 @@ info:
   title: Supermock API
   version: 1.0.0
 servers:
-  - url: https://localhost:8000
+- url: https://localhost:8000
 paths:
   /_requests/{test_id}:
     get:
       summary: Get requests for test
       parameters:
-        - name: test_id
-          in: path
-          required: true
-          schema:
-            type: string
-            example: 194a0bde-d70f-4b16-a303-1ffa2a77c143
+      - name: test_id
+        in: path
+        required: true
+        schema:
+          type: string
+          example: 194a0bde-d70f-4b16-a303-1ffa2a77c143
       responses:
         "200":
           description: ""
@@ -27,57 +27,71 @@ paths:
                   requests:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Request'
+                      $ref: "#/components/schemas/Request"
   /_responses:
+    get:
+      summary: Get responses
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  responses:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Response"
     post:
       summary: Put response
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Response'
+              $ref: "#/components/schemas/Response"
       responses:
         "200":
           description: ""
           content:
             application/json:
-              example: '{}'
+              example: "{}"
         "400":
           description: ""
           content:
             application/json:
-              example: '{"message": "uuid=required,test_id=required,method=required,path=required,status=required"}'
+              example: "{\"message\": \"uuid=required,test_id=required,method=required,path=required,status=required\"}"
   /_responses/{uuid}:
     delete:
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
-            example: 2b78ffe3-ce2b-46e3-ae71-6509e1613068
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+          example: 2b78ffe3-ce2b-46e3-ae71-6509e1613068
       responses:
         "200":
           description: ""
           content:
             application/json:
-              example: '{}'
+              example: "{}"
   /_tests/{test_id}:
     delete:
       summary: Delete all requests and responses by test id
       parameters:
-        - name: test_id
-          in: path
-          required: true
-          schema:
-            type: string
-            example: d3fb230c-c9d9-4e7a-b936-15b6c6c891aa
+      - name: test_id
+        in: path
+        required: true
+        schema:
+          type: string
+          example: d3fb230c-c9d9-4e7a-b936-15b6c6c891aa
       responses:
         "200":
           description: ""
           content:
             application/json:
-              example: '{}'
+              example: "{}"
 components:
   schemas:
     Request:
